@@ -26,6 +26,10 @@ module Fairy
       node = super(export, bjob)
       policy = @opts[:prequeuing_policy]
       import = Import.new(policy)
+      import.set_log_callback do |n| 
+	Log::info(self, "IMPORT POP: #{n}")
+      end
+
       @imports.push import
       node.export.output = import
       import.no_import = 1
