@@ -17,6 +17,10 @@ module Fairy
 	@import = Import.new(Queue.new)
 	@import.no=input.no
 	@import.add_key(input.key)
+	@import.set_log_callback do |n| 
+	  Log::info(self, "IMPORT POP: #{n}")
+	end
+
 	start
       end
       self
