@@ -31,15 +31,18 @@ module Fairy
       import = Import.new(policy)
       import.add_key(input.key)
       input.output = import
+      import.set_log_callback do |n| 
+	Log::info(self, "IMPORT POP: #{n}")
+      end
       @imports.push import
       self
     end
 
     def start
-Log::debug(self, "AAAAAAAA:0")
+      Log::debug(self, "START")
       # この位置重要. これによって, ファイル生成のシリアライズ性を保証している
       output_uri = @vfile.gen_real_file_name(@processor.addr, CONF.VF_ROOT)
-Log::debug(self, "AAAAAAAA:0.5")
+      Log::debug(self, "write real file: #{output_uri}")
       begin
 	p output_uri
 	output_file = URI.parse(output_uri).path
@@ -57,13 +60,15 @@ Log::debug(self, "AAAAAAAA:2")
       super do
 Log::debug(self, "AAAAAAAA:3")
 	File.open(output_file, "w") do |io|
-Log::debug(self, "AAAAAAAA:4")
+	  Log::debug(self, "start write real file: #{output_uri}")
+
 	  while import = @imports.pop
 Log::debug(self, "AAAAAAAA:5")
 	    for l in import
 	      io.puts l
 	    end
 	  end
+	  Log::debug(self, "finish write real file: #{output_uri}")
 	end
 	self.status = ST_OUTPUT_FINISH
       end
