@@ -27,6 +27,9 @@ module Fairy
 	@import = Import.new(policy)
 	@import.no=input.no
 	@import.add_key(input.key)
+	@import.set_log_callback do |n| 
+	  Log::info(self, "IMPORT POP: #{n}")
+	end
 	start
       end
       self
