@@ -34,6 +34,10 @@ module Fairy
 	    import = Import.new(policy)
 	    import.no = jinput.no
 	    import.add_key(jinput.key)
+	    import.set_log_callback do |n| 
+	      Log::info(self, "IMPORT POP: #{n}")
+	    end
+
 	    import
 	  else
 	    nil
